test/intrinsic.go
// errorcheckandrundir -0 -d=ssa/intrinsics/debug

//go:build amd64 || arm64 || arm || s390x

// Copyright 2016 The Go Authors. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

package ignored
